packages/itwinui-css/src/dialog/dialog.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../style/index';
@import '../icon/index';

$iui-dialog-width: 380px;

@mixin iui-dialog-wrapper {
  position: relative;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  transform: translateX(0); // creates containing block for position: fixed
}

@mixin iui-dialog {
  z-index: 999;
  isolation: isolate;
  border-radius: $iui-border-radius;
  box-shadow: $iui-elevation-24;
  box-sizing: border-box;
  position: fixed;
  padding: $iui-baseline $iui-m;
  box-sizing: border-box;
  padding: $iui-baseline $iui-m;
  overflow: hidden;
  pointer-events: auto;
  background-color: #FFF; // IE fallback
  background-color: var(--iui-color-background-1);
  @media (forced-colors: active) {
    border: 1px solid;
  }

  &:not(.iui-dialog-visible) {
    visibility: hidden;
    opacity: 0;
  }

  transition: visibility $iui-speed-instant linear, opacity $iui-speed-fast ease-out;
  transition-delay: $iui-speed-fast, $iui-speed-instant;

  &.iui-dialog-visible {
    transition-delay: $iui-speed-instant; // remove delay for entry animation
  }
}

@mixin iui-dialog-default {
  max-width: Max(50%, $iui-dialog-width);
  min-width: $iui-dialog-width;
  max-height: 100vh;
}

@mixin iui-dialog-placement {
  &:not([data-iui-placement]) {
    left: 50%;
    top: 33%;
    transform: translate(-50%, -33%);
  }

  &[data-iui-placement='top-left'] {
    top: 0;
    left: 0;
    margin-left: $iui-baseline;
    margin-top: $iui-m;
  }

  &[data-iui-placement='top-right'] {
    top: 0;
    right: 0;
    margin-right: $iui-baseline;
    margin-top: $iui-m;
  }

  &[data-iui-placement='bottom-left'] {
    bottom: 0;
    left: 0;
    margin-left: $iui-baseline;
    margin-bottom: $iui-m;
  }

  &[data-iui-placement='bottom-right'] {
    bottom: 0;
    right: 0;
    margin-right: $iui-baseline;
    margin-bottom: $iui-m;
  }
}

@mixin iui-dialog-full-page {
  border-radius: 0;
  height: 100vh;
  height: 100dvh;
  width: 100vw;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  will-change: transform;

  &:not(.iui-dialog-visible) {
    transform: translateY(100%);
  }

  @media (prefers-reduced-motion: no-preference) {
    transition: visibility $iui-speed-instant linear $iui-speed, opacity $iui-speed-instant linear $iui-speed,
      transform $iui-speed-fast ease-in;

    &.iui-dialog-visible {
      transition: transform $iui-speed ease-out;
    }
  }
}

@mixin iui-dialog-draggable {
  max-width: 100%;
  max-height: 100vh;
  min-width: $iui-dialog-width;
  min-height: 144px;
  display: flex;
  flex-direction: column;
  border: 1px solid var(--iui-color-background-border);
}

@mixin iui-dialog-animation {
  &-enter {
    transform: translateY(100%);
    opacity: 0;
  }

  &-enter-active {
    transform: translateY(0);
    opacity: 1;
  }
}

@mixin iui-dialog-title {
  display: flex;
  align-items: center;
  font-size: inherit;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.5;
  margin-right: auto;
}

@mixin iui-dialog-title-bar {
  display: flex;
  align-items: center;
  margin-bottom: $iui-baseline;
  box-sizing: border-box;
  font-size: $iui-font-size-subheading;
}

@mixin iui-dialog-title-bar-filled {
  font-size: $iui-font-size-leading;
  padding: round($iui-baseline * 0.5) $iui-m;
  margin: -#{$iui-baseline} -#{$iui-m} $iui-baseline -#{$iui-m}; // negative margin to counteract dialog padding
  cursor: grab;
  background-color: var(--iui-color-background-3);
  border-bottom: 1px solid var(--iui-color-background-border);

  &:active {
    cursor: grabbing;
  }
}

@mixin iui-dialog-content {
  flex-grow: 2;
  margin: 0 -#{$iui-m};
  padding: 0 $iui-m;
  overflow-y: auto;
  overflow-y: overlay;
}

@mixin iui-dialog-button-bar {
  margin-top: $iui-baseline;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: $iui-s;
}

